# deploy-orchestrator-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  tmp-pr-body-delete-me.md
.deploy-orchestrator/: policy.example.yml
.github/workflows/: publish-ghcr.yml  test.yml
docs/: ARCHITECTURE.md  DECISION_POLICY.md  INTEGRATION.md  LOCAL_SETUP.md  OAUTH.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  SECURITY.md
scripts/: smoke_test.py
src/deploy_orchestrator_mcp/: __init__.py  analyzer.py  app_logs.py  approval.py  audit.py  auth.py  config.py  coolify_provider.py  credentials.py  execution.py  (+24 more)
supabase/: audit_events.sql
tests/: test_analyzer.py  test_app_logs.py  test_approval.py  test_audit.py  test_audit_persistence.py  test_audit_supabase.py  test_auth.py  test_config.py  test_coolify_provider.py  test_credentials.py  test_execution.py  test_fly_provider.py  test_github_report_tool.py  test_koyeb_provider.py  test_migrations.py  test_oauth.py  test_oauth_redis.py  test_planner.py  test_policy.py  test_provider_env_vars.py  test_providers.py  test_railway_api.py  test_railway_provider.py  test_redaction.py  test_render_api.py  test_render_deploy.py  test_render_logs.py  test_render_provider.py  test_render_rollback.py  test_render_rollback_deploy.py  test_render_workflows.py  test_schema_contract.py  test_stack_detector.py  test_summary.py  test_supabase_api.py  test_supabase_provider.py  test_vercel_api.py  test_vercel_preview_protection.py  test_vercel_preview_ttl.py  test_vercel_tools.py
